@@ -3,6 +3,7 @@
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- in search bar, C+y a doesn't work
 - CA+ to switch desktops, then numpad keys
 - printing: check default printer setting
 - still broken: https://sourceforge.net/tracker/?func=detail&atid=100588&aid=831264&group_id=588
